JSC allows invalid var declarations when the declared name is the same as a let/const variable https://bugs.webkit.org/show_bug.cgi?id=147600

Reviewed by Yusuke Suzuki.

Source/JavaScriptCore:

We had an ordering bug where if you first declared a "let"
variable then a "var" variable with the same name, you wouldn't
get a syntax error. But, if you did it in the reverse order,
you would. This patch fixes this syntax error to be order independent.

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseVariableDeclarationList):
(JSC::Parser<LexerType>::createBindingPattern):
(JSC::Parser<LexerType>::parseFunctionDeclaration):
* parser/Parser.h:
(JSC::Scope::declareVariable):

LayoutTests:

* js/let-syntax-expected.txt:
* js/script-tests/let-syntax.js:
(hasSyntaxError):



Canonical link: https://commits.webkit.org/167613@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190188 268f45cc-cd09-0410-ab3c-d52691b4dbfc